force-app/main/default/objects/nFORCE__Data_Snapshot_Item__c/nFORCE__Data_Snapshot_Item__c.object-meta.xml
<CustomObject>
    <description>The Data Snapshot Item object is used to store the Context ID of the records to be stored in the Data Snapshot Archive big object.</description>
    <label>Data Snapshot Item</label>
    <nameField>
        <displayFormat>DSI-{0000000000}</displayFormat>
        <label>Data Snapshot Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Snapshot Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>