force-app/main/default/objects/nFORCE__Data_Snapshot_Item__c/fields/nFORCE__Context_Id__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Context_Id__c</fullName>
    <description>The system automatically populates this required field with the 18 character Salesforce ID of the record to be captured in the Data Snapshot Archive big object.</description>
    <externalId>true</externalId>
    <label>Context Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>