force-app/main/default/objects/nFORCE__Data_Snapshot_Item__c/fields/nFORCE__Data_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Data_Snapshot__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The system automatically populates this required field with the lookup to the snapshot record.</description>
    <label>Snapshot</label>
    <referenceTo>nFORCE__Data_Snapshot__c</referenceTo>
    <relationshipLabel>Data Snapshot Items</relationshipLabel>
    <relationshipName>Data_Snapshot_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>