force-app/main/default/objects/nFORCE__Data_Snapshot_Item__c/fields/nFORCE__Job_Id__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Job_Id__c</fullName>
    <description>The system automatically populates this text field with the Job Id after the asynchronous job is queued to write the data from the record associated with the Context_Id__c field in the Data_Snapshot_Item_c object to the Data_Snapshot_Archive_b object.</description>
    <label>Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>